kubernetes/production/network-policy-containers.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blockinternet
  namespace: production
spec:
  podSelector:
    matchLabels:
      internet: block
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 53
